--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
   <body>
     <div id="leftContainer">
-      <div class="btns2 border">
+      <fieldset class="btns2 border">
+        <legend>Tools</legend>
         <input
           id="line-width"
           type="range"
@@ -21,8 +22,9 @@
         <button id="mode-btn">Fill</button>
         <button id="destroy-btn">Destroy</button>
         <button id="erase-btn">Erase</button>
-      </div>
-      <div class="color-options border">
+      </fieldset>
+      <fieldset class="color-options border">
+        <legend>Palette</legend>
         <div
           class="color-option"
           style="background-color: #cd84f1"
@@ -74,16 +76,23 @@
           data-color="#4b4b4b"
         ></div>
         <input type="color" id="color" />
+      </fieldset>
+      <fieldset class="btns border" style="margin-bottom: 20px">
+        <legend>Image & Text</legend>
+        <label for="file"> Add Photo </label>
+        <input type="file" accept="image/*" id="file" />
+        <input
+          type="text"
+          placeholder="Add text here and double click !"
+          id="text"
+        />
+      </fieldset>
+      <div class="btns border">
+        <button id="save">Save image</button>
       </div>
     </div>
-    <canvas></canvas>
 
-    <div class="btns border">
-      <label for="file"> Add Photo </label>
-      <input type="file" accept="image/*" id="file" />
-      <input type="text" placeholder="Add text here.." id="text" />
-      <button id="save">Save image</button>
-      <script src="js/app.js"></script>
-    </div>
+    <canvas></canvas>
+    <script src="js/app.js"></script>
   </body>
 </html>
