--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <body>
     <div id="leftContainer">
+      <img id="logo" src="img/LIKECANVAS.png" alt="LIKECANVAS" />
       <fieldset class="btns2 border">
         <legend>Tools</legend>
         <input
