--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Meme Maker</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <title>LIKECANVAS</title>
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
 
   <body>
@@ -20,7 +21,8 @@
           value="5"
           step="0.5"
         />
-        <button id="mode-btn">Fill</button>
+        <button id="draw-btn">Draw</button>
+        <button id="fill-btn">Fill</button>
         <button id="destroy-btn">Destroy</button>
         <button id="erase-btn">Erase</button>
       </fieldset>
@@ -94,6 +96,6 @@
     </div>
 
     <canvas></canvas>
-    <script src="js/app.js"></script>
+    <script src="./js/app.js"></script>
   </body>
 </html>
