feat: cursor-draw ,btn css

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           value="5"
           step="0.5"
         />
-        <button id="draw-btn">Draw</button>
+        <button id="draw-btn" class="activeBtn">Draw</button>
         <button id="fill-btn">Fill</button>
         <button id="destroy-btn">Destroy</button>
         <button id="erase-btn">Erase</button>
@@ -97,5 +97,6 @@
 
     <canvas></canvas>
     <script src="./js/app.js"></script>
+    <script src="./js/button.js"></script>
   </body>
 </html>
